--- a/index.html
+++ b/index.html
@@ -100,8 +100,8 @@
     <p class="text-sm mb-2">
      Pruchase the wallet and connect it to the program in order to flash any platform or wallet
     </p>
-    <button class="bg-teal-500 text-white px-4 py-2 rounded-md">
-     BUY WALLET
+    <a href="https://t.me/AIVCAM"><button class="bg-teal-500 text-white px-4 py-2 rounded-md"></button></a>
+    TELEGRAM
     </button>
    </div>
    <div class="grid grid-cols-2 gap-8">
