--- a/index.html
+++ b/index.html
@@ -98,7 +98,7 @@
    </div>
    <div class="text-right mb-6">
     <p class="text-sm mb-2">
-     Pruchase the wallet and connect it to the program in order to flash any platform or wallet
+     Contact me if you need a tool to do this
     </p>
     <a href="https://t.me/AIVCAM"><button class="bg-teal-500 text-white px-4 py-2 rounded-md">
     TELEGRAM</button></a>
