--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
  <body class="bg-white p-8">
   <div class="max-w-4xl mx-auto">
    <div class="flex items-center mb-6">
-    <img alt="Tether USDT logo" class="w-20 h-20 rounded-full mr-4" height="80" src="https://replicate.delivery/xezq/03z6bOB9U47jJFVqYlnpuvvoegNB4vn9qsbd9A2e6GbgUY2TA/out-0.png" width="80"/>
+    <img alt="Tether USDT logo" class="w-20 h-20 rounded-full mr-4" height="80" src="https://i.ibb.co/r3dkYXs/file.png" width="80"/>
     <div>
      <h1 class="text-3xl font-bold">
       Flash USDT Sender
