--- a/index.html
+++ b/index.html
@@ -21,9 +21,9 @@
      <h1 class="text-3xl font-bold">
       Flash USDT Sender
      </h1>
-     <p class="text-gray-600">
+      <a href="https://github.com/VCamPro/Flash-USDT"><p class="text-gray-600">
       Connect to your Wallet
-     </p>
+     </p></a>
      <p class="text-gray-600">
       Start sending USDT
      </p>
