--- a/index.html
+++ b/index.html
@@ -237,5 +237,15 @@
     &copy; 2024 Flash USDT Sender. All rights reserved.
    </p>
   </footer>
+  <!-- Google tag (gtag.js) -->
+<script async src="https://www.googletagmanager.com/gtag/js?id=AW-16807243989">
+</script>
+<script>
+  window.dataLayer = window.dataLayer || [];
+  function gtag(){dataLayer.push(arguments);}
+  gtag('js', new Date());
+
+  gtag('config', 'AW-16807243989');
+</script>
  </body>
 </html>
